--- a/my-app/src/components/Home.css
+++ b/my-app/src/components/Home.css
@@ -1,58 +1,69 @@
-/* src/components/Home.css */
+/* my-app/src/components/Home.css */
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
 
-body {
-    font-family: 'Georgia', serif;
-    background-color: #f5f5f5;
-    margin: 0;
-    padding: 0;
+@media (max-width: 768px) {
+  .product-grid {
+    grid-template-columns: 1fr;
   }
-  
-  .home-container {
+
+  .hero-banner {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .hero-image,
+  .hero-content {
+    width: 100%;
+  }
+
+  .hero-content {
+    margin-top: 20px;
     text-align: center;
-    padding: 50px;
-    background-image: url('https://example.com/your-luxury-background.jpg'); /* Replace with your background image URL */
-    background-size: cover;
-    background-position: center;
-    color: #333;
   }
-  
-  .home-header h1 {
-    font-size: 3em;
-    color: #b8860b; /* Gold color */
-    margin-bottom: 20px;
-  }
-  
-  .home-header p {
-    font-size: 1.5em;
-    color: #555;
-    margin-bottom: 40px;
-  }
-  
-  .home-buttons {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-  }
-  
-  .home-button {
-    background-color: #b8860b; /* Gold color */
-    color: white;
-    border: none;
-    padding: 15px 30px;
-    font-size: 1em;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    border-radius: 5px;
-    flex: 1 1 200px; /* Flex-grow, flex-shrink, and flex-basis */
-    max-width: 200px;
-  }
-  
-  .home-button:hover {
-    background-color: #daa520; /* Darker gold color */
-  }
-  
-  .home-button:focus {
-    outline: none;
-  }
-  
+}
+
+.hero-banner {
+  position: relative;
+  width: 100%;
+  height: 60vh;
+  background-image: url('../assets/images/hero.jpg');
+  background-size: 160%; /* Slightly zoomed */
+  background-position: 60% 40%;
+  overflow: hidden;
+  transition: background-size 0.5s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero-banner::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.158);
+}
+
+.hero-content {
+  color: #fff;
+  text-align: center;
+  z-index: 1;
+}
+
+
+.hero-banner h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 2.5em;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+}
